--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,11 @@
 /web/sites/README.txt
 /web/sites/all/*/README.txt
 /web/sites/example.sites.php
+/web/sites/default/default.settings.php
 /web/themes/
 
 # Ignore configuration files that may contain sensitive information.
-/web/sites/*/*.settings.php
-/web/sites/*/settings*.php
+/web/sites/*/settings.local.php
 
 # Ignore paths that contain user-generated content.
 /web/sites/*/files
