--- a/composer.json
+++ b/composer.json
@@ -82,5 +82,11 @@
         "preserve-paths": [
             "web/sites"
         ]
+    },
+    "require-dev": {
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
+        "drupal/coder": "^8.3.7",
+        "phpcompatibility/php-compatibility": "*",
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
