--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
         "ext-openssl": "*",
         "ext-pdo": "*",
         "ext-xml": "*",
-        "composer/installers": "^1.2",
-        "composer/semver": "^1.4",
-        "cweagans/composer-patches": "^1.6.5",
+        "composer/installers": "^1.10",
+        "composer/semver": "^3.2",
+        "cweagans/composer-patches": "^1.7",
         "drupal-composer/preserve-paths": "^0.1",
-        "drupal/composer_autoloader": "^1.0",
-        "drupal/drupal": "^7.69",
+        "drupal/composer_autoloader": "^1.3",
+        "drupal/drupal": "^7.78",
         "drush/drush": "^8.0",
-        "symfony/filesystem": "~2.7|^3",
-        "webflo/drupal-finder": "^1.0.0"
+        "symfony/filesystem": "^5.2",
+        "webflo/drupal-finder": "^1.2"
     },
     "conflict": {
         "drupal/core": "8.*"
@@ -84,8 +84,8 @@
         ]
     },
     "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
-        "drupal/coder": "^8.3.7",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+        "drupal/coder": "^8.3",
         "phpcompatibility/php-compatibility": "*",
         "squizlabs/php_codesniffer": "^3.5"
     }
