Introduce lando xdebug <mode> tool.

--- a/.lando.yml
+++ b/.lando.yml
@@ -3,7 +3,9 @@ recipe: drupal7
 
 config:
   via: nginx
-  xdebug: false
+  xdebug: off
+  config:
+    php: .lando/php.ini
 
 services:
   adminer:
@@ -19,6 +21,10 @@ services:
     webroot: web
     build:
       - /app/.lando/build.sh
+    overrides:
+      environment:
+        XDEBUG_MODE:
+        PHP_IDE_CONFIG: "serverName=appserver"
   database:
     type: 'mariadb:10.3'
   mailhog:
@@ -57,15 +63,10 @@ tooling:
     description: Apply required (database) updates.
     cmd:
       - appserver: /app/.lando/update.sh
-  xdebug-on:
-    service: appserver
-    description: Enables xdebug for nginx
-    cmd: docker-php-ext-enable xdebug && pkill -o -USR2 php-fpm
-    user: root
-  xdebug-off:
-    service: appserver
-    description: Disables xdebug for nginx
-    cmd: rm /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && pkill -o -USR2 php-fpm
+  xdebug:
+    description: Loads Xdebug in the selected mode
+    cmd:
+      - appserver: /app/.lando/xdebug.sh
     user: root
 
 proxy:
