Fix the dehy/adminer image to 4.7 to avoid PHP 8 breaking changes.

--- a/.lando.yml
+++ b/.lando.yml
@@ -11,7 +11,7 @@ services:
   adminer:
     type: compose
     services:
-      image: dehy/adminer
+      image: dehy/adminer:4.7
       command: /bin/s6-svscan /etc/services.d
     run_as_root:
       - /app/.lando/adminer.sh
