--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
             }
         },
         "preserve-paths": [
-            "web/sites"
+            "web/sites",
+            "web/.dockerignore"
         ]
     },
     "require-dev": {
