Update PHP to version 7.4.

--- a/.lando.yml
+++ b/.lando.yml
@@ -11,13 +11,13 @@ services:
   adminer:
     type: compose
     services:
-      image: dehy/adminer:4.7
+      image: dehy/adminer
       command: /bin/s6-svscan /etc/services.d
     run_as_root:
       - /app/.lando/adminer.sh
     portforward: true
   appserver:
-    type: 'php:7.3'
+    type: 'php:7.4'
     webroot: web
     build_as_root:
       - chmod -R a+w /app/web/
@@ -87,4 +87,4 @@ env_file:
   - .lando/lando.env
 
 # Tested with Lando version.
-version: v3.0.26
+version: v3.6.1
