--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,15 @@
         "ext-openssl": "*",
         "ext-pdo": "*",
         "ext-xml": "*",
-        "composer/installers": "^1.10",
+        "composer/installers": "^2.0",
         "composer/semver": "^3.2",
         "cweagans/composer-patches": "^1.7",
         "drupal-composer/preserve-paths": "^0.1",
         "drupal/composer_autoloader": "^1.3",
-        "drupal/drupal": "^7.78",
-        "drush/drush": "^8.0",
-        "symfony/filesystem": "^5.2",
+        "drupal/drupal": "^7.85",
+        "drupal/warden": "^2.0",
+        "drush/drush": "^8.4",
+        "symfony/filesystem": "^5.4",
         "webflo/drupal-finder": "^1.2",
         "wunderio/drupal-ping": "7.x-dev"
     },
@@ -85,6 +86,10 @@
         "patches": {
             "cweagans/composer-patches": {
                 "Call the preserve paths hooks" : "https://github.com/SebCorbin/composer-patches/commit/1cb9bacba51f8bba0c5f3f322c3bb61e4ceae974.patch"
+            },
+            "drupal/warden": {
+                "https://www.drupal.org/project/warden/issues/3259003" : "https://git.drupalcode.org/project/warden/-/commit/ab120a924206da9ec6f013a699bbcbb7af7969d1.patch"
+                  
             }
         },
         "preserve-paths": [
