--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,11 @@ version: 2.1
 orbs:
   silta: silta/silta@0.1
 
+executors:
+  cicd74:
+    docker:
+      - image: eu.gcr.io/silta-images/cicd:circleci-php7.4-node14-composer2-v0.1
+
 workflows:
   version: 2
   commit:
@@ -14,6 +19,7 @@ workflows:
       - silta/drupal-build-deploy: &build-deploy
           name: build-deploy
           drupal-root: /
+          executor: cicd74
           codebase-build:
             - run:
                 name: Build the codebase
