Skip patches reporting.

--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
                   
             }
         },
+        "composer-patches-skip-reporting": true,
         "preserve-paths": [
             "web/sites",
             "web/.dockerignore"
