--- a/composer.json
+++ b/composer.json
@@ -1,100 +1,113 @@
 {
-    "name": "wunderio/drupal7-project",
-    "description": "Project template for Drupal 7 projects with composer",
-    "type": "project",
-    "license": "GPL-2.0-or-later",
-    "authors": [
-        {
-            "name": "",
-            "role": ""
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/7"
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/wunderio/drupal-ping"
-        }
-    ],
-    "require": {
-        "php": ">=7.4",
-        "ext-curl": "*",
-        "ext-gd": "*",
-        "ext-json": "*",
-        "ext-openssl": "*",
-        "ext-pdo": "*",
-        "ext-xml": "*",
-        "composer/installers": "^2.0",
-        "cweagans/composer-patches": "^1.7",
-        "drupal-composer/preserve-paths": "^0.1",
-        "drupal/composer_autoloader": "^1.3",
-        "drupal/drupal": "^7.85",
-        "drupal/warden": "^2.0",
-        "drush/drush": "^8.4",
-        "symfony/filesystem": "^5.4",
-        "webflo/drupal-finder": "^1.2",
-        "wunderio/drupal-ping": "7.x-dev"
-    },
-    "conflict": {
-        "drupal/core": "8.*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "sort-packages": true
-    },
-    "autoload": {
-        "classmap": [
-            "scripts/composer/ScriptHandler.php"
-        ]
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-            "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
-        ],
-        "post-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-            "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
-        ],
-        "post-create-project-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
-        ]
-    },
-    "extra": {
-        "dropin-paths": {
-            "web/": ["type:web-dropin"]
-        },
-        "installer-paths": {
-            "web/": ["type:drupal-core"],
-            "web/profiles/{$name}/": ["type:drupal-profile"],
-            "web/sites/all/drush/{$name}/": ["type:drupal-drush"],
-            "web/sites/all/libraries/{$name}/": ["type:drupal-library"],
-            "web/sites/all/modules/contrib/{$name}/": ["type:drupal-module"],
-            "web/sites/all/themes/contrib/{$name}/": ["type:drupal-theme"]
-        },
-        "patches": {
-            "cweagans/composer-patches": {
-                "Call the preserve paths hooks" : "https://github.com/SebCorbin/composer-patches/commit/1cb9bacba51f8bba0c5f3f322c3bb61e4ceae974.patch"
-            },
-            "drupal/warden": {
-                "https://www.drupal.org/project/warden/issues/3259003" : "https://git.drupalcode.org/project/warden/-/commit/ab120a924206da9ec6f013a699bbcbb7af7969d1.patch"
-                  
-            }
-        },
-        "composer-patches-skip-reporting": true,
-        "preserve-paths": [
-            "web/sites",
-            "web/.dockerignore"
-        ]
-    },
-    "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-        "drupal/coder": "^8.3",
-        "phpcompatibility/php-compatibility": "*",
-        "squizlabs/php_codesniffer": "^3.5"
+  "name": "wunderio/drupal7-project",
+  "description": "Project template for Drupal 7 projects with composer",
+  "type": "project",
+  "license": "GPL-2.0-or-later",
+  "authors": [
+    {
+      "name": "",
+      "role": ""
     }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.drupal.org/7"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/wunderio/drupal-ping"
+    }
+  ],
+  "require": {
+    "php": ">=7.4",
+    "ext-curl": "*",
+    "ext-gd": "*",
+    "ext-json": "*",
+    "ext-openssl": "*",
+    "ext-pdo": "*",
+    "ext-xml": "*",
+    "composer/installers": "^2.0",
+    "cweagans/composer-patches": "^1.7",
+    "drupal-composer/preserve-paths": "^0.1",
+    "drupal/composer_autoloader": "^1.3",
+    "drupal/drupal": "^7.85",
+    "drupal/warden": "^2.0",
+    "drush/drush": "^8.4",
+    "symfony/filesystem": "^5.4",
+    "webflo/drupal-finder": "^1.2",
+    "wunderio/drupal-ping": "7.x-dev"
+  },
+  "conflict": {
+    "drupal/core": "8.*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "sort-packages": true
+  },
+  "autoload": {
+    "classmap": [
+      "scripts/composer/ScriptHandler.php"
+    ]
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
+      "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
+    ],
+    "post-update-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
+      "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
+    ],
+    "post-create-project-cmd": [
+      "DrupalProject\\composer\\ScriptHandler::removeInternalFiles"
+    ]
+  },
+  "extra": {
+    "dropin-paths": {
+      "web/": [
+        "type:web-dropin"
+      ]
+    },
+    "installer-paths": {
+      "web/": [
+        "type:drupal-core"
+      ],
+      "web/profiles/{$name}/": [
+        "type:drupal-profile"
+      ],
+      "web/sites/all/drush/{$name}/": [
+        "type:drupal-drush"
+      ],
+      "web/sites/all/libraries/{$name}/": [
+        "type:drupal-library"
+      ],
+      "web/sites/all/modules/contrib/{$name}/": [
+        "type:drupal-module"
+      ],
+      "web/sites/all/themes/contrib/{$name}/": [
+        "type:drupal-theme"
+      ]
+    },
+    "patches": {
+      "cweagans/composer-patches": {
+        "Call the preserve paths hooks": "https://github.com/SebCorbin/composer-patches/commit/1cb9bacba51f8bba0c5f3f322c3bb61e4ceae974.patch"
+      },
+      "drupal/warden": {
+        "https://www.drupal.org/project/warden/issues/3259003": "https://git.drupalcode.org/project/warden/-/commit/ab120a924206da9ec6f013a699bbcbb7af7969d1.patch"
+      }
+    },
+    "composer-patches-skip-reporting": true,
+    "preserve-paths": [
+      "web/sites",
+      "web/.dockerignore"
+    ]
+  },
+  "require-dev": {
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+    "drupal/coder": "^8.3",
+    "phpcompatibility/php-compatibility": "*",
+    "squizlabs/php_codesniffer": "^3.5"
+  }
 }
