--- a/composer.json
+++ b/composer.json
@@ -91,6 +91,9 @@
         "https://www.drupal.org/project/warden/issues/3259003": "https://git.drupalcode.org/project/warden/-/commit/ab120a924206da9ec6f013a699bbcbb7af7969d1.patch"
       }
     },
+    "patchLevel": {
+      "drupal/core": "-p2"
+    },
     "composer-exit-on-patch-failure": true,
     "composer-patches-skip-reporting": true,
     "preserve-paths": [
