--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
             - run:
                 name: Build the codebase
                 command: |
-                  composer install -n --prefer-dist --ignore-platform-reqs --no-dev --no-cache
+                  composer install -n --prefer-dist --ignore-platform-reqs --no-dev
                   mkdir -p web/sites/default
           context: silta_dev
           filters:
