--- a/.lando.yml
+++ b/.lando.yml
@@ -18,6 +18,7 @@ services:
     portforward: true
   appserver:
     type: 'php:7.4'
+    composer_version: 2
     webroot: web
     build_as_root:
       - chmod -R a+w /app/web/
