Add Composer allow-plugins section.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,14 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "koodimonni/composer-dropin-installer": true,
+      "composer/installers": true,
+      "cweagans/composer-patches": true,
+      "drupal-composer/preserve-paths": true
+    }
   },
   "autoload": {
     "classmap": [
