--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,22 @@
     }
   ],
   "require": {
-    "composer/installers": "^2.0",
+    "php": ">=7.4",
+    "ext-curl": "*",
+    "ext-gd": "*",
+    "ext-json": "*",
+    "ext-openssl": "*",
+    "ext-pdo": "*",
+    "ext-xml": "*",
+    "composer/installers": "^1.12",
+    "composer/semver": "^1.4",
     "cweagans/composer-patches": "^1.7",
     "drupal-composer/preserve-paths": "^0.1",
     "drupal/composer_autoloader": "^1.3",
-    "drupal/drupal": "^7.85",
+    "drupal/drupal": "^7.87",
     "drupal/warden": "^2.0",
     "drush/drush": "^8.4",
-    "symfony/filesystem": "^5.4",
+    "symfony/filesystem": "~2.7 || ^3",
     "webflo/drupal-finder": "^1.2",
     "wunderio/drupal-ping": "7.x-dev"
   },
