Silta container base image migration to Docker Hub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 executors:
   cicd74:
     docker:
-      - image: eu.gcr.io/silta-images/cicd:circleci-php7.4-node14-composer2-v0.1
+      - image: wunderio/silta-cicd:circleci-php7.4-node14-composer2-v0.1
 
 workflows:
   version: 2
